@@ -4,6 +4,8 @@ For more details, please see https://hg.python.org/jython
 
 Jython 2.7.1rc1
   Bugs fixed
+    - [ 2504 ] datetime.date.__tojava__ returns incorrect dates in non-UTC timezones with
+               negative offset (Jython 2.7.0)
     - [ 2561 ] win32_ver raises exception (breaks test_platform on windows)
     - [ 2521 ] Windows installation (all) fails on Windows 10
     - [ 2557 ] ongoing pain with platform detection via os.name and sys.platform
